subdir('include/gnuradio/howto')

howto_sources = []
howto_cu_sources = []
howto_pybind_sources = []
howto_pybind_names = []
howto_deps = []

# Individual block subdirectories
#  Copy block as an example
subdir('copy')

subdir('lib')
if (get_option('enable_python'))
    subdir('python/newsched/howto')
endif

subdir('test')
